--- a/Speart/src/vista/paneles/proceso/PnlProcesos.form
+++ b/Speart/src/vista/paneles/proceso/PnlProcesos.form
@@ -62,6 +62,7 @@
                         <TitledBorder title="ACTIVIDAD"/>
                       </Border>
                     </Property>
+                    <Property name="opaque" type="boolean" value="false"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[650, 250]"/>
                     </Property>
@@ -290,7 +291,7 @@
                       </AuxValues>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                          <AbsoluteConstraints x="160" y="220" width="350" height="-1"/>
+                          <AbsoluteConstraints x="160" y="220" width="350" height="80"/>
                         </Constraint>
                       </Constraints>
 
